--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,5 @@ jobs:
         sshpass -p "${{ secrets.VM_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.VM_USERNAME }}@${{ secrets.VM_HOST }} -p ${{ secrets.SSH_PORT }} '
           cd /home/tiagomartinssousa/MatchUp-Web-App/matchup-web &&
           git pull origin main &&
-          npm install &&
-          npm run build &&
-          sudo systemctl restart nginx'
+          npm install'
           
